@@ -597,7 +597,7 @@
    <comment>Display the mouse location</comment>
   </property>
   <property name="ShowPlayerLocation" >
-   <bool value="true" />
+   <bool value="false" />
    <comment>Display the player location</comment>
   </property>
   <property name="ShowFrameRate" >
@@ -897,7 +897,7 @@
    <comment>Display the mouse location</comment>
   </property>
   <property name="ShowPlayerLocation" >
-   <bool value="true" />
+   <bool value="false" />
    <comment>Display the player location</comment>
   </property>
   <property name="ShowFrameRate" >
@@ -1197,7 +1197,7 @@
    <comment>Display the mouse location</comment>
   </property>
   <property name="ShowPlayerLocation" >
-   <bool value="true" />
+   <bool value="false" />
    <comment>Display the player location</comment>
   </property>
   <property name="ShowFrameRate" >
@@ -1497,7 +1497,7 @@
    <comment>Display the mouse location</comment>
   </property>
   <property name="ShowPlayerLocation" >
-   <bool value="true" />
+   <bool value="false" />
    <comment>Display the player location</comment>
   </property>
   <property name="ShowFrameRate" >
@@ -1797,7 +1797,7 @@
    <comment>Display the mouse location</comment>
   </property>
   <property name="ShowPlayerLocation" >
-   <bool value="true" />
+   <bool value="false" />
    <comment>Display the player location</comment>
   </property>
   <property name="ShowFrameRate" >
@@ -2476,8 +2476,8 @@
   <property name="DockingInfo" >
     <comment>Automatically generated window position information</comment>
     <string value="
-ShowEQ - Experience,ShowEQ Combat,ShowEQ - Channel Messages,
-[ShowEQ - Experience,400,360,800,480,0][ShowEQ Combat,400,360,800,480,0][ShowEQ - Channel Messages,38,687,800,480,0]
+ShowEQ - Experience,ShowEQ Combat,
+[ShowEQ - Experience,400,360,800,480,0][ShowEQ Combat,400,360,800,480,0]
 
 
 
@@ -2485,7 +2485,8 @@ ShowEQ - Experience,ShowEQ Combat,ShowEQ - Channel Messages,
 
 
 ShowEQ - Spawn List 2,ShowEQ - Spawn Points,ShowEQ - Spell List,Map ,
-[ShowEQ - Spawn List 2,64,1,378,190,1][ShowEQ - Spawn Points,0,0,378,118,1][ShowEQ - Spell List,0,0,378,136,1][Map ,0,1,378,766,1]" />
+[ShowEQ - Spawn List 2,64,1,378,190,1][ShowEQ - Spawn Points,0,0,378,118,1][ShowEQ - Spell List,0,0,378,136,1][Map ,0,1,378,766,1]
+" />
   </property>
   <property name="GuildsFile" >
    <string value="guilds2.dat" />
@@ -3200,9 +3201,6 @@ If any argument is left blank, it is filled in with its default...
   </property>
   <property name="SortIncreasing" >
    <bool value="true" />
-  </property>
-  <property name="WindowSize" >
-   <size width="479" height="248" />
   </property>
  </section>
 <!-- ============================================================= -->
